Profundizando en los fundamentos JS

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     </header>
 
     <main class="container">
-        <video src="./assets/video-conejo.mp4"></video>
+        <video class="movie">
+            <source src="./assets/video-conejo.mp4" />
+        </video>
 
         <button>Play/Pause</button>
+        <button id="btnMute">Mute/UnMute</button>
     </main>
+
     
+    
+    <script type="module" src="./assets/index.js"></script>
 </body>
 </html>
